--- a/paper/references.bib
+++ b/paper/references.bib
@@ -55,3 +55,18 @@
  address = {Secaucus, NJ, USA},
  keywords = {Continuous queries, Data streams, Query language, Query processing},
 } 
+
+@inproceedings{linear,
+ author = {Arasu, Arvind and Cherniack, Mitch and Galvez, Eduardo and Maier, David and Maskey, Anurag S. and Ryvkina, Esther and Stonebraker, Michael and Tibbetts, Richard},
+ title = {Linear Road: A Stream Data Management Benchmark},
+ booktitle = {Proceedings of the Thirtieth International Conference on Very Large Data Bases - Volume 30},
+ series = {VLDB '04},
+ year = {2004},
+ isbn = {0-12-088469-0},
+ location = {Toronto, Canada},
+ pages = {480--491},
+ numpages = {12},
+ url = {http://dl.acm.org/citation.cfm?id=1316689.1316732},
+ acmid = {1316732},
+ publisher = {VLDB Endowment},
+} 
